[gd_scene load_steps=8 format=3 uid="uid://dmscpcoytwixa"]

[ext_resource type="Script" path="res://scenes/shotgun.gd" id="1_hhmyy"]
[ext_resource type="PackedScene" path="res://scenes/shotgun_bullet.tscn" id="2_4pkbn"]
[ext_resource type="Texture2D" uid="uid://jbckm2ktpxjt" path="res://textures/shotgun.png" id="2_hpq5l"]
[ext_resource type="Texture2D" uid="uid://cxeac5y833pnl" path="res://textures/muzzleflash.png" id="3_rdk80"]

[sub_resource type="Animation" id="Animation_uksqy"]
resource_name = "dipense_casing"

[sub_resource type="Animation" id="Animation_gnxu1"]
resource_name = "muzzle_flash"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.05), Vector2(0.05, 0.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MuzzleFlash:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(90, 0), Vector2(100, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fxbyx"]
_data = {
"dipense_casing": SubResource("Animation_uksqy"),
"muzzle_flash": SubResource("Animation_gnxu1")
}

[node name="shotgun" type="Node2D"]
script = ExtResource("1_hhmyy")
max_ammo = 12
ammo = 12
mag_size = 6
ammo_in_mag = 6
Bullet = ExtResource("2_4pkbn")
max_pellets = 6

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(35, 4.54747e-13)
rotation = 1.57079
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_hpq5l")

[node name="EndOfGun" type="Marker2D" parent="."]
position = Vector2(79, 0)

[node name="BulletDirection" type="Marker2D" parent="."]
position = Vector2(86, 0)

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(90, 0)
rotation = 1.57079
scale = Vector2(0.2, 0.05)
texture = ExtResource("3_rdk80")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fxbyx")
}

[node name="ShootingCooldown" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
